added phone number and consents in dto
