# internal/domains/identity/service/registration/customer_registration.go
@@ -33,13 +33,13 @@ func NewCustomerRegistrationService(container *di.Container) *CustomerRegistrati
 //
 // Parameters:
 // - ctx: Context for request lifecycle management.
-// - customer: *identity.RegularCustomerRegistrationRequestInfo Customer registration data including name, email, and waiver signings.
+// - customer: identity.RegularCustomerRegistrationRequestInfo Customer registration data including name, email, and waiver signings.
 //
 // Returns:
 // - *errLib.CommonError: Error if registration fails.
 func (s *CustomerRegistrationService) RegisterCustomer(
 	ctx context.Context,
-	customer *identity.RegularCustomerRegistrationRequestInfo,
+	customer identity.RegularCustomerRegistrationRequestInfo,
 ) *errLib.CommonError {
 
 	for _, waiver := range customer.Waivers {
@@ -59,7 +59,7 @@ func (s *CustomerRegistrationService) RegisterCustomer(
 		}
 	}()
 
-	userId, err := s.UserInfoTempRepo.CreatePendingUserInfoTx(ctx, tx, customer.FirstName, customer.LastName, &customer.Email, nil, customer.Age)
+	userId, err := s.UserInfoTempRepo.CreatePendingUserInfoTx(ctx, tx, customer.FirstName, customer.LastName, customer.HasConsentToSms, customer.HasConsentToEmailMarketing, &customer.Phone, &customer.Email, nil, customer.Age)
 
 	if err != nil {
 		tx.Rollback()
@@ -67,14 +67,14 @@ func (s *CustomerRegistrationService) RegisterCustomer(
 	}
 
 	for _, waiver := range customer.Waivers {
-		if err := s.WaiverSigningRepository.CreateWaiverSigningRecordTx(ctx, tx, userId, waiver.WaiverUrl, waiver.IsWaiverSigned); err != nil {
+		if err = s.WaiverSigningRepository.CreateWaiverSigningRecordTx(ctx, tx, userId, waiver.WaiverUrl, waiver.IsWaiverSigned); err != nil {
 			tx.Rollback()
 			return err
 		}
 	}
 
 	// Commit the transaction
-	if err := tx.Commit(); err != nil {
+	if txErr = tx.Commit(); txErr != nil {
 		tx.Rollback()
 		return errLib.New("Failed to commit transaction", http.StatusInternalServerError)
 	}
